<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.frag.frag_gregg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="111dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="139dp"
        android:contentDescription="@string/gregg_image"
        android:src="@drawable/gregg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="397dp"
        android:layout_height="345dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:text="@string/gregg_braden_biografia"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/frag_gregg_libros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#7A5555"
        android:text="@string/libros"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/frag_gregg_videos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#7A5555"
        android:text="@string/videos"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/frag_gregg_libros"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/frag_gregg_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/canal_oficial_en_youtube"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_gregg_libros" />

    <TextView
        android:id="@+id/frag_gregg_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="15dp"
        android:text="@string/pagina_web_oficial"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/frag_gregg_youtube"
        app:layout_constraintTop_toBottomOf="@+id/frag_gregg_videos" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="374dp"
        android:layout_height="65dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/nota_greeg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_gregg_website" />
</androidx.constraintlayout.widget.ConstraintLayout>